# demeter-firmware

./: .gitignore  CMakeLists.txt  LICENSE.txt  OPTIMIZATION.md  PORTING_GUIDE.md  README.md  sdkconfig  sdkconfig.defaults
Source/: main.c
main/: CMakeLists.txt  idf-project.cpp  main.cpp
